Create a multimodule project