@@ -4,20 +4,24 @@ import com.slavamashkov.orderservice.dto.OrderLineItemsDto;
 import com.slavamashkov.orderservice.dto.OrderRequest;
 import com.slavamashkov.orderservice.model.Order;
 import com.slavamashkov.orderservice.model.OrderLineItems;
+import com.slavamashkov.orderservice.repository.OrderLineItemsRepository;
 import com.slavamashkov.orderservice.repository.OrderRepository;
 import com.slavamashkov.orderservice.service.OrderService;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
+    private final OrderLineItemsRepository orderLineItemsRepository;
 
     @Override
     public void placeOrder(OrderRequest orderRequest) {
@@ -27,12 +31,23 @@ public class OrderServiceImpl implements OrderService {
         List<OrderLineItems> orderLineItems = orderRequest.getOrderLineItemsDtoList()
                 .stream()
                 .map(OrderLineItemsDto::mapFromDto)
-                .toList();
+                .collect(Collectors.toList());
 
         order.setOrderLineItems(orderLineItems);
 
         orderRepository.save(order);
+        for (OrderLineItems oli : orderLineItems) {
+            oli.setOrder(order);
+            orderLineItemsRepository.save(oli);
+        }
 
         log.info("Product with id: {} is saved", order.getId());
+    }
+
+    @Override
+    public void deleteOrderById(Long id) {
+        Order order = orderRepository.findById(id).orElseThrow(EntityNotFoundException::new);
+
+        orderRepository.delete(order);
     }
 }
